# Server

./: CMakeLists.txt  LinkedList.cpp  LinkedList.hpp  README.md  Sockets.sln  Sockets.vcxproj  a.out  bed.cpp  deur.cpp  fileHandle.cpp  file_handle.cpp  file_handle.h  linkedList_test.cpp  main.cpp  meubel.cpp  muur.cpp  schemerlamp.cpp  sockclient.cpp  socketService.cpp  socketService.h  states.cpp
headers/: bed.h  deur.h  fileHandle.h  file_handle.h  meubel.h  muur.h  schemerlamp.h  socketService.h
